--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html>
 <head>
 <title>Spilling ink</title>
+<style>
+    nav ul {
+      list-style: none;   
+      margin: 0;
+      padding: 0;
+    }
+
+    nav li {
+      display: inline-block;
+      margin-right: 20px;    
+    }
+  </style>
+</head>
 </head>
 <body>
 <div style="text-align: center; font-size: 50pt; color: black; background-color: lightpink; float: center; margin: 0 auto; height: 100px; width: 1,000px; font-family: "American Typewriter", serif;">
 Spilling ink
 </div>
+<nav>
+<ul>
+<li><a href= " spilling ink website pg2.html"> Archives</a></li>
+<li><a href= " spilling ink website pg2.html"> Current newsletter</a></li>
+<li><a href= " spilling ink website pg2.html">About me</a></li>
+<li><a href= " spilling ink website pg2.html"> other</a></li>
+</ul>
+</nav>
 <div style="font-size: 30pt; text-align: center; margin-top: 50px">
 AI AND ME
 </div>
