--- a/spilling ink website pg2.html
+++ b/spilling ink website pg2.html
@@ -7,3 +7,9 @@
 <div style="text-align: center; font-size: 50pt; color: black; background-color: lightpink; float: center; margin: 0 auto; height: 100px; width: 1,000px; font-family: "American Typewriter", serif;">
 Spilling ink
 </div>
+<nav>
+<ul>
+<li><a href="linksarchivespg2.html"> 2025 newsletters</a></li>
+</ul>
+</nav>
+</body>
