Update spilling ink website pg2.html

--- a/spilling ink website pg2.html
+++ b/spilling ink website pg2.html
@@ -9,6 +9,7 @@ Spilling ink
 </div>
 <nav>
 <ul>
+<li><a href="index.html"> home</a></li>
 <li><a href="linksarchivespg2.html"> 2025 newsletters</a></li>
 </ul>
 </nav>
