--- a/spilling ink website pg2.html
+++ b/spilling ink website pg2.html
@@ -10,6 +10,7 @@ Spilling ink
 <nav>
 <ul>
 <li><a href="index.html"> home</a></li>
+<li><a href="linksarchivespg2.html"> 2024 newsletters</a></li>
 <li><a href="linksarchivespg2.html"> 2025 newsletters</a></li>
 </ul>
 </nav>
