Fix navigation links in pg2.html

--- a/spilling ink website pg2.html
+++ b/spilling ink website pg2.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 <title>Spilling ink</title>
+<style>
+    nav ul {
+      list-style: none;   
+      margin: 0;
+      padding: 0;
+    }
+
+    nav li {
+      display: inline-block;
+      margin-right: 20px;    
+    }
+  </style>
 </head>
 <body>
 <div style="text-align: center; font-size: 50pt; color: black; background-color: lightpink; float: center; margin: 0 auto; height: 100px; width: 1,000px; font-family: "American Typewriter", serif;">
@@ -10,8 +22,8 @@ Spilling ink
 <nav>
 <ul>
 <li><a href="index.html"> home</a></li>
-<li><a href="linksarchives2024"> 2024 newsletters</a></li>
-<li><a href="linkarchivespg2.html"> 2025 newsletters</a></li>
+<li><a href="linksarchives2024.html"> 2024 newsletters</a></li>
+<li><a href="linksarchivespg2.html"> 2025 newsletters</a></li>
 </ul>
 </nav>
 </body>
