--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPEhtml>
 <html>
 <head>
@@ -15,7 +17,6 @@
     }
   </style>
 </head>
-</head>
 <body>
 <div style="text-align: center; font-size: 50pt; color: black; background-color: lightpink; float: center; margin: 0 auto; height: 100px; width: 1,000px; font-family: "American Typewriter", serif;">
 Spilling ink
@@ -24,8 +25,10 @@ Spilling ink
 <ul>
 <li><a href= " spilling ink website pg2.html"> Archives</a></li>
 <li><a href= " spilling ink website pg2.html"> Current newsletter</a></li>
-<li><a href= " spilling ink website pg2.html">About me</a></li>
-<li><a href= " spilling ink website pg2.html"> other</a></li>
+<li><a href= " index.html">Home</a></li>
+<li><a href= "Movie.html">Movies</a></li>
+<li><a href= " spilling ink website pg2.html">Writing Corner</a></li>
+<li><a href= " spilling ink website pg2.html"> Other</a></li>
 </ul>
 </nav>
 <div style="font-size: 30pt; text-align: center; margin-top: 50px">
