Add navigation links to Archives and other sections

--- a/spilling ink website pg2.html
+++ b/spilling ink website pg2.html
@@ -24,6 +24,11 @@ Spilling ink
 <li><a href="index.html"> home</a></li>
 <li><a href="linksarchives2024.html"> 2024 newsletters</a></li>
 <li><a href="linksarchivespg2.html"> 2025 newsletters</a></li>
+<li><a href="spilling ink website pg2.html">Archives</a></li>
+<li><a href="">Current Newsletter</a></li>
+<li><a href="Movie.html">Movies</a></li>
+<li><a href="">Writing Corner</a></li>
+<li><a href="">Other</a></li>
 </ul>
 </nav>
 </body>
