Revise index.html with new content and layout
Updated the content and structure of the index.html file, including changes to navigation links, styling, and added personal information.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPEhtml>
 <html>
 <head>
@@ -23,27 +21,27 @@ Spilling ink
 </div>
 <nav>
 <ul>
-<li><a href= " spilling ink website pg2.html"> Archives</a></li>
-<li><a href= " spilling ink website pg2.html"> Current newsletter</a></li>
 <li><a href= " index.html">Home</a></li>
 <li><a href= "Movie.html">Movies</a></li>
-<li><a href= " spilling ink website pg2.html">Writing Corner</a></li>
-<li><a href= " spilling ink website pg2.html"> Other</a></li>
+<li><a href= "Other.html">Other</a></li>
 </ul>
 </nav>
-<div style="font-size: 30pt; text-align: center; margin-top: 50px">
-AI AND ME
+<div style="font-size: 30pt; text-align: center; margin-top: 50px; font-family:'Times New Roman', serif;">
+About me
 </div>
-<div style= "font-size: 15pt; text-align: center; margin-top: 15px;">
-By: Dhristi Desai 
+<div style="font-size: 15pt; text-align: center; margin-top: 50px; font-family: fantasy;"> 
+<p>Hiya friends!</p>
+<p>My name is Dhristi I am 10 years old.  I have a younger sister, yet sadly no pets. I live in upstate New York. While making spilling ink I enjoy doing all the things I love, such as, writing, coding, and making movies. My family is from India and we are vegetarian. Enough about me, if YOU have any ideas, or want to say something you can contact me at dhristidesai@hotmail.com. </p>
+<p>Enjoy!</p>
+<div style="font-size: 30pt; text-align: center; margin-top: 50px; font-family:'Times New Roman', serif;">
+The history of spilling ink
 </div>
-<div style="text-align: center; font-size: 20px;">
-<p> AI is a branch of computer science focused on creating systems that can perform tasks that normally require human intelligence such as recognizing patterns, making decisions, learning from data, and understanding language. In simple terms AI is when computers are programmed to <q>think</q> and <q>learn</q> in ways that seem smart, similar to humans. Want to know where I got that information from AI! In my chat with the chat bot called ChatGPT (Same thing as AI. AI is just the big idea. ChatGPT is not.)</p>
- 
-<p>So, who made it? I mean someone just invented it one day and put it to action right, well no. See, Ai in an ongoing project for 70 years it started way back in the 1950s. In the 1950s, life in America changed a lot. Families started spending more money on houses, cars, and new things for their homes. At the same time, the Cold War made people afraid of communism. The Korean War broke out, and the Civil Rights Movement began as African Americans fought for equal rights. Somewhere a man named Alan Turing and other mathematicians asked <q>can machines think?</q> and did a test to measure machine intelligence, the test was called the Turing test.</p>
-
-    <p>AI can do tasks faster than humans but how? It is a computer, and computers can find data and do them very quickly, it also never gets tiered or bored, and lastly it sees patterns that humans cannot. Well, that is also how ai can make mistakes. Ai predicts things based on patterns, sometimes it gets stuck in a loop and builds lie after lie. But that does not mean ai is not a helpful tool if used the right way. It can help in so many ways and do boring, repetitive things that help us so much. Who knows what the future holds, but we will just have to wait and see.
-</p>
-</div>
+<div style="font-size: 15pt; text-align: center; margin-top: 50px; font-family: fantasy;">
+<p>Hiya friends!</p>
+<p>I got the name spilling ink because first I tried to make my newsletters with ink, but it kept spilling. Eventually my mom got so fed up that she said I should make my newsletters with my laptop then print it out.</p>
+<p>I started Spilling ink in 2024. Selling my newsletters once a month for a quarter. But once 2025 began I wanted to reach a new goal and start coding a website. Now look at me!</p>
+<p>The inspiration came to me when I wanted to join the school newsletter but wanted to make changes I thought I could not do in the school newsletter. Wanting to make a more “me”, newsletter I created spilling ink. Now, here I am every day working on something new to show the world. If you have any complains or concerns please contact dhristidesai@hotmail.com. And as I always end my introduction pieces in my newsletters.</p>
+<p>Enjoy!</p>
 </body>
 </html>
+
