Update navigation links in Movie.html

--- a/Movie.html
+++ b/Movie.html
@@ -49,12 +49,9 @@ Spilling ink
 </div>
 <nav>
 <ul>
-<li><a href= " spilling ink website pg2.html"> Archives</a></li>
-<li><a href= " spilling ink website pg2.html"> Current newsletter</a></li>
 <li><a href= " index.html">Home</a></li>
 <li><a href= "Movie.html">Movies</a></li>
-<li><a href= " spilling ink website pg2.html">Writing Corner</a></li>
-<li><a href= " spilling ink website pg2.html"> Other</a></li>
+<li><a href= "Other.html">Other</a></li>
 </ul>
 </nav>
 <div class="video-row">
@@ -72,3 +69,4 @@ Spilling ink
 </div>
 </div>
 </body>
+</html>
