Refactor index.html with updated content and styling
Updated the HTML structure and content of the index page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ About me
 </div>
 <div style="font-size: 15pt; text-align: center; margin-top: 50px; font-family: fantasy;"> 
 <p>Hiya friends!</p>
-<p>My name is Dhristi I am 10 years old.  I have a younger sister, yet sadly no pets. I live in upstate New York. While making spilling ink I enjoy doing all the things I love, such as, writing, coding, and making movies. My family is from India and we are vegetarian. Enough about me, if YOU have any ideas, or want to say something you can contact me at dhristidesai@hotmail.com. </p>
+<p>My name is Dhristi I am 10 years old.  I have a younger sister, yet sadly no pets. I live in upstate New York. While making spilling ink I enjoy doing all the things I love, such as, writing, coding, and making movies.I am a golbal citizen, and I enjoy plant based dishes. Enough about me, if YOU have any ideas, or want to say something you can contact me at dhristidesai@hotmail.com. </p>
 <p>Enjoy!</p>
 <div style="font-size: 30pt; text-align: center; margin-top: 50px; font-family:'Times New Roman', serif;">
 The history of spilling ink
@@ -44,4 +44,5 @@ The history of spilling ink
 <p>Enjoy!</p>
 </body>
 </html>
+
 
