Add new YouTube video items to Movie.html
Added new video items with iframes for YouTube videos.

--- a/Movie.html
+++ b/Movie.html
@@ -51,6 +51,7 @@ Spilling ink
 <ul>
 <li><a href= " index.html">Home</a></li>
 <li><a href= "Movie.html">Movies</a></li>
+<li><a href= "Writing.html ">Writing Corner</a></li>
 <li><a href= "Other.html">Other</a></li>
 </ul>
 </nav>
@@ -58,6 +59,10 @@ Spilling ink
   <div class="video-item">
   <iframe src="https://www.youtube.com/embed/TTS81bxXuT4?si=ndszltgTF7Gyl9_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>The Missing Murderer</p>
+  </div>
+  <div class="video-item">
+  <iframe src="https://www.youtube.com/embed/oeGM9mzjNyY?si=aMwQOIJE1K4NNFL9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>The Astonishing Accomplice. A Sequel to the Missing Murderer.</p>
   </div>
   <div class="video-item">
      <iframe src="https://www.youtube.com/embed/1EB5WHap_Kg?si=hWcKqa_CXihMign-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
