Enhance Movie.html with navigation and video content
Added navigation links and a video section to the Movie.html file.

--- a/Movie.html
+++ b/Movie.html
@@ -47,6 +47,7 @@
 <div style="text-align: center; font-size: 50pt; color: black; background-color: lightpink; float: center; margin: 0 auto; height: 100px; width: 1,000px; font-family: "American Typewriter", serif;">
 Spilling ink
 </div>
+<div style="font-size: 25px;">
 <nav>
 <ul>
 <li><a href= " index.html">Home</a></li>
@@ -54,6 +55,7 @@ Spilling ink
 <li><a href= "Other.html">Other</a></li>
 </ul>
 </nav>
+</div>
 <div class="video-row">
   <div class="video-item">
   <iframe src="https://www.youtube.com/embed/TTS81bxXuT4?si=ndszltgTF7Gyl9_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
