--- a/Other.html
+++ b/Other.html
@@ -19,6 +19,7 @@
 <div style="text-align: center; font-size: 50pt; color: black; background-color: lightpink; float: center; margin: 0 auto; height: 100px; width: 1,000px; font-family: "American Typewriter", serif;">
 Spilling ink
 </div>
+<div style="font-size: 25px;">
 <nav>
 <ul>
 <li><a href= " index.html">Home</a></li>
@@ -26,6 +27,7 @@ Spilling ink
 <li><a href= "Other.html">Other</a></li>
 </ul>
 </nav>
+</div>
 <div style="font-size: 30pt; text-align: center; margin-top: 50px">
 AI AND ME
 </div>
@@ -38,6 +40,7 @@ By: Dhristi Desai
 <p>So, who made it? I mean someone just invented it one day and put it to action right, well no. See, Ai in an ongoing project for 70 years it started way back in the 1950s. In the 1950s, life in America changed a lot. Families started spending more money on houses, cars, and new things for their homes. At the same time, the Cold War made people afraid of communism. The Korean War broke out, and the Civil Rights Movement began as African Americans fought for equal rights. Somewhere a man named Alan Turing and other mathematicians asked <q>can machines think?</q> and did a test to measure machine intelligence, the test was called the Turing test.</p>
 
     <p>AI can do tasks faster than humans but how? It is a computer, and computers can find data and do them very quickly, it also never gets tiered or bored, and lastly it sees patterns that humans cannot. Well, that is also how ai can make mistakes. Ai predicts things based on patterns, sometimes it gets stuck in a loop and builds lie after lie. But that does not mean ai is not a helpful tool if used the right way. It can help in so many ways and do boring, repetitive things that help us so much. Who knows what the future holds, but we will just have to wait and see.
+
 </p>
 </div>
 </body>
