Refactor index.html with updated navigation layout
Added a new navigation section with improved styling.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div style="text-align: center; font-size: 50pt; color: black; background-color: lightpink; float: center; margin: 0 auto; height: 100px; width: 1,000px; font-family: "American Typewriter", serif;">
 Spilling ink
 </div>
+<div style="font-size: 25px;">
 <nav>
 <ul>
 <li><a href= " index.html">Home</a></li>
@@ -26,8 +27,10 @@ Spilling ink
 <li><a href= "Other.html">Other</a></li>
 </ul>
 </nav>
+</div>
 </body>
 </html>
+
 
 
 
