Enhance index.html with movie promotion
Added a new paragraph to promote movies in the links.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@ Spilling ink
 </ul>
 </nav>
 </div>
+<p> New! Movies in the links. Go and check out fun and exiting movies!</p>
 </body>
 </html>
+
 
 
 
