Update index.html with new footer section
Added a footer with smaller text for the new movies announcement.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@ Spilling ink
 </ul>
 </nav>
 </div>
+<div style="font-size: 10px; text-align: center;">
 <p> New! Movies in the links. Go and check out fun and exiting movies!</p>
+</div>
 </body>
 </html>
+
 
 
 
